--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>NUX</title>
 </head>
 <style>
-    *{
+    * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
-    :root{
-        --button-height:32px;
+
+    :root {
+        --button-height: 32px;
         --font-size: 14px;
         --button-bg: white;
         --button-active-bg: #eee;
@@ -20,22 +21,29 @@
         --border-color: #999;
         --border-color-hover: #666;
     }
-    #app{
+
+    #app {
         margin: 20px;
     }
-    body{
+
+    body {
         font-size: var(--font-size);
     }
 </style>
 <style>
-
+    .icon {
+        width: 1em;
+        height: 1em;
+    }
 </style>
 <body>
-    <div id="app">
-        <g-button></g-button>
-    </div>
+<div id="app">
+    <g-button icon="settings" icon-position="right">
+        我爱js
+    </g-button>
+</div>
 
-    <script src="./src/app.js"></script>
-
+<script src="./src/app.js"></script>
+<script src="//at.alicdn.com/t/font_1319752_s19doy7r08.js"></script>
 </body>
 </html>
