--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <g-button icon="settings" icon-position="right">
         我爱js
     </g-button>
+    <g-button icon="settings" >
+        我爱js
+    </g-button>
 </div>
 
 <script src="./src/app.js"></script>
