--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
     }
 </style>
 <style>
-    .icon {
-        width: 1em;
-        height: 1em;
-    }
+
 </style>
 <body>
 <div id="app">
@@ -44,6 +41,7 @@
     <g-button icon="settings" >
         我爱js
     </g-button>
+    <g-icon name="download"></g-icon>
 </div>
 
 <script src="./src/app.js"></script>
