--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 </style>
 <body>
 <div id="app">
-    <g-button icon="settings" icon-position="right">
+    <g-button  :loading="loading2" @click="loading2 = !loading2">
+        按钮
+    </g-button>
+    <g-button icon="settings" icon-position="right" :loading="true">
         我爱js
     </g-button>
-    <g-button icon="settings" >
+    <g-button icon="settings" :loading="loading1" @click="loading1 = !loading1">
         我爱js
     </g-button>
     <g-icon name="download"></g-icon>
